Renamed budget-results to budgeting-tool-results, and linked budgeting-tool and budgeting-tool-results together

--- a/public/budgeting-tool-results.html
+++ b/public/budgeting-tool-results.html
@@ -1028,15 +1028,15 @@
               <li>
                 <ul>
                   <li class="side-nav-beta__sibling -visited"><a href="#">Start</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">Income</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">1. Bills</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">2. Household</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">3. Leisure</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">4. Travel</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">5. Car</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">6. Child</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">7. Family</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">8. Debt</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">Income</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">1. Bills</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">2. Household</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">3. Leisure</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">4. Travel</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">5. Car</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">6. Child</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">7. Family</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">8. Debt</a></li>
                   <li class="side-nav-beta__sibling -current"><a href="#">Results</a></li>
                 </ul>
               </li>
