--- a/public/budgeting-tool.html
+++ b/public/budgeting-tool.html
@@ -141,7 +141,7 @@
                   <li class="side-nav-beta__sibling"><a href="#">6. Child</a></li>
                   <li class="side-nav-beta__sibling"><a href="#">7. Family</a></li>
                   <li class="side-nav-beta__sibling"><a href="#">8. Debt</a></li>
-                  <li class="side-nav-beta__sibling -current"><a href="#">Results</a></li>
+                  <li class="side-nav-beta__sibling"><a href="budgeting-tool-results.html">Results</a></li>
                 </ul>
               </li>
             </ul>
