Fixed the remove link on tool

--- a/public/budgeting-tool.html
+++ b/public/budgeting-tool.html
@@ -74,9 +74,9 @@
         </div>
         <div class="articleContent">
           <div class="main-content__right">
-            <h2 style="margin-top: 0;">2. Benefits</h2>
+            <h2 style="margin-top: 0;">Income - Benefits</h2>
             <fieldset>
-              <label for="income">Income support<a href="#" class="remove">Remove</a></label>
+              <label for="income">Income support<a href="#" class="remove u-pull-right">Remove</a></label>
               <div class="field-group field-group--dropdown">
                 <input id="income" placeholder="£" type="number">
                 <div class="dropdown">
@@ -89,7 +89,7 @@
               </div>
             </fieldset>
             <fieldset>
-              <label for="income">Tax credit<a href="#" class="remove">Remove</a></label>
+              <label for="income">Tax credit<a href="#" class="remove u-pull-right">Remove</a></label>
               <div class="field-group field-group--dropdown">
                 <input id="income" placeholder="£" type="number">
                 <div class="dropdown">
