--- a/public/budgeting-tool-results.html
+++ b/public/budgeting-tool-results.html
@@ -373,7 +373,7 @@
       			dataLabels: {
       				formatter: function () {
       					// display only if larger than 25
-      					return this.y > 25 ? this.point.name + ': £' + this.y : null;
+      					return this.y > .5 ? this.point.name + ': £' + this.y : null;
       				}
       			}
       		}],
