Add inital PIP7 content

--- a/public/long-form.html
+++ b/public/long-form.html
@@ -117,8 +117,7 @@
                 <p>Check your lease if you own the leasehold (not the freehold) on your home. You may have to get permission from the freeholder before work starts. If the lease says you can’t make changes, you can still ask the freeholder for permission. You may have to pay some costs.</p>
                 <div class="callout--warning">
                   <p>If you don’t get the permission or approval you need, you could be fined, prosecuted or made to pay to put things right.</p>
-                </div><a href="#" class="back-to-top">Back to Top</a>
-                </div><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
+                </div><a href="#" class="back-to-top">Back to Top</a><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step2">
                 <h2 class="ref-heading"><span class="ref-heading__heading">Step 2: Find good builders or contractors</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
@@ -169,7 +168,6 @@
                   <li>a clear and detailed description of exactly what you want done</li>
                   <li>a list of questions to help you get all the information you need to compare and choose between contractors - Trustmark has <a href="#">questions you can use as a checklist</a></li>
                 </ul>
-                <p>When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.</p>
                 <p>When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.</p><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step3">
@@ -212,7 +210,6 @@
                   <p>Before saying yes to a quote, you should check there’s insurance in place and try to get a written contract.</p>
                 </div>
                 <h4>See a sample quote</h4>
-                <p>You can download a PDF of a <a href="#">sample quote</a>.</p>
                 <p>You can download a PDF of a <a href="#">sample quote</a>.</p><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step4">
@@ -234,7 +231,6 @@
                 <p>Your insurer will probably want to know what contractor you’re using and what insurance they have. They might suggest that you take out joint insurance with the contractor.</p>
                 <div class="callout">
                   <p>If you don’t have home and contents insurance, it’s worth getting some before the work starts - there’s a bigger risk your home will be damaged or your things stolen while work’s going on.</p>
-                </div>
                 </div><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step5">
@@ -310,7 +306,6 @@
                 <div class="callout--yellow">
                   <h3>Further help</h3>
                   <p>Contact the <a href="#">Citizens Advice consumer helpline</a> if you need more help - a trained adviser can give you advice over the phone or by email. Contact the Consumerline if you're in <a href="#">Northern Ireland</a>.</p>
-                </div>
                 </div><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step6">
