--- a/public/budgeting-tool-results.html
+++ b/public/budgeting-tool-results.html
@@ -1021,7 +1021,7 @@
               <li class="side-nav-beta__heading -active -open"><a><span>Budgeting tool</span></a></li>
               <li>
                 <ul>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">Start</a></li>
+                  <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">Start</a></li>
                   <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">Income</a></li>
                   <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">1. Bills</a></li>
                   <li class="side-nav-beta__sibling -visited"><a href="budgeting-tool.html">2. Household</a></li>
