Amend index for PIP

--- a/public/pip-contents.html
+++ b/public/pip-contents.html
@@ -73,15 +73,13 @@
           <div class="title">
             <h1 class="title__heading js-ref"><span class="title__title">Help filling in your PIP2 form</span></h1>
           </div>
-          <div class="title__subheading">This advice is for 
-            <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a>
-          </div>
           <div class="articleContent">
             <div>
-              <div class="steps"><a href="#" class="steps__link"></a><span class="steps--number">1</span><b>Check if you need permission or approval</b>
+              <div class="steps"><a href="#" class="steps__link"><span class="steps--number">1</span></a>
+                <p>Check if you need permission or approval</p>
                 <p>Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.]</p>
+                <p>Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re <a href="#">terminally ill</a> your claim will be processed more quickly).</p>
               </div>
-              <p>Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re <a href="#">terminally ill</a> your claim will be processed more quickly).</p>
               <p>If you’re <a href="#">moving from DLA to PIP</a> your payments won’t stop while you’re waiting for your PIP claim to be processed, as long as you make your claim for PIP within a month of being told by the DWP that you should.</p>
               <p>You should make sure you’re prepared and have all the relevant information to help you make your claim.</p>
               <p>Your first payment for PIP will be backdated to the date you started your claim and cover the length of time it takes the Department for Work and Pensions (DWP) to make its decision. If you're moving from DLA to PIP your PIP payments will start the day after your DLA stops.</p>
@@ -211,9 +209,9 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Help with your PIP claim</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP" item.="item.">How to claim PIP</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP" class="-current" item.="item.">How to claim PIP</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Help filling in your PIP2 form" class="-current" item.="item.">Help filling in your PIP2 form</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Help filling in your PIP2 form" item.="item.">Help filling in your PIP2 form</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP if you have a terminal illness" item.="item.">How to claim PIP if you have a terminal illness</a>
                 </li>
