--- a/public/charts.html
+++ b/public/charts.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide 
+    <title>Citizens Advice style guide - Charts
     </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
@@ -33,81 +33,15 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item">Home</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#styles" title="Styles">Styles</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Charts</span>
         </div>
       </nav>
       <div class="main-content">
         <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title"></span></h1>
+          <h1 class="title__heading js-ref"><span class="title__title">Charts</span></h1>
         </div>
-        <div class="articleContent">
-          <div class="row">
-            <div class="span8">
-              <p class="u-lede">This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h2 id="principles">Design principles</h2>
-              <ul>
-                <li><a href="principles.html">Design principles</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span4">
-              <h2 id="styles">Styles</h2>
-              <ul>
-                <li><a href="typography.html">Typography</a></li>
-                <li><a href="colours.html">Colours</a></li>
-                <li><a href="tables.html">Tables</a></li>
-                <li>
-                  <h4 id="forms">Forms</h4>
-                  <ul>
-                    <li><a href="buttons.html">Buttons</a></li>
-                    <li><a href="fields.html">Fields</a></li>
-                    <li><a href="field-groups.html">Field groups</a></li>
-                  </ul>
-                </li>
-                <li> 
-                  <h4 id="grid">Grid</h4>
-                  <ul>
-                    <li><a href="grid.html">Grid layout</a></li>
-                    <li><a href="new-grid.html">New grid layout</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-            <div class="span4">
-              <h2 id="modules">Modules</h2>
-              <ul>
-                <li><a href="callout.html">Callout</a></li>
-                <li><a href="collapse.html">Collapse</a></li>
-                <li><a href="charts.html">Charts</a></li>
-                <li><a href="section-notice.html">Section Notices</a></li>
-                <li><a href="toolbar.html">Content toolbar</a></li>
-                <li><a href="cookie-monster.html">Cookie Monster</a></li>
-                <li> 
-                  <h4 id="modals">Modals</h4>
-                  <ul>
-                    <li><a href="extent.html">Extent Switcher</a></li>
-                    <li><a href="overlay.html">Modal/Overlay</a></li>
-                    <li><a href="reference.html">Reference tool</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-            <div class="span4">
-              <h2 id="templates">Templates</h2>
-              <ul>
-                <li><a href="content.html">Content example</a></li>
-                <li><a href="long-form.html">Long form content example</a></li>
-                <!--li-->
-                <!--	a(href="advisor.html") Advisor content-->
-                <li><a href="section-index.html">Section index</a></li>
-              </ul>
-            </div>
-          </div>
+        <div class="articleContent row">
+          <div class="span8"></div>
         </div>
         <div class="print-only">
           <h2>This section is print only</h2>
