Fixes to charts.jade

--- a/public/charts.html
+++ b/public/charts.html
@@ -64,6 +64,10 @@
       				{
       			name: 'Spending',
       			data: [450, 350]
+      		},
+      				{
+      			name: 'Saving',
+      			data: [150, 75]
       		}],
       		navigation: {
       			buttonOptions: {
@@ -139,7 +143,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#styles" title="Styles">Styles</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Charts</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#modules" title="Modules">Modules</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Charts</span>
         </div>
       </nav>
       <div class="main-content">
@@ -188,6 +192,10 @@
 					{
 				name: 'Spending',
 				data: [450, 350]
+			},
+			{
+				name: 'Saving',
+				data: [150, 75]
 			}],
 			navigation: {
 				buttonOptions: {
