--- a/public/tables.html
+++ b/public/tables.html
@@ -42,50 +42,53 @@
         </div>
         <div class="articleContent row">
           <div class="span8">
+            <h2>Basic table</h2>
             <div class="example-box-plain">
-              <table class="full-width">
+              <table>
                 <thead>
                   <tr>
-                    <th scope="col">th</th>
-                    <th scope="col">th</th>
-                    <th scope="col">th</th>
+                    <th scope="col">Column heading</th>
+                    <th scope="col">Column heading</th>
+                    <th scope="col">Column heading</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td>td</td>
-                    <td>td</td>
-                    <td>td</td>
+                    <td>Table cell</td>
+                    <td>Table cell</td>
+                    <td>Table cell</td>
                   </tr>
                   <tr>
-                    <td>td</td>
-                    <td>td</td>
-                    <td>td</td>
+                    <td>Table cell</td>
+                    <td>Table cell</td>
+                    <td>Table cell</td>
                   </tr>
                 </tbody>
               </table>
             </div>
-            <pre><code class="language-html">&lt;table class="full-width"&gt;
+            <pre><code class="language-html">&lt;table&gt;
 	&lt;thead&gt;
 		&lt;tr&gt;
-			&lt;th scope="col"&gt;th&lt;/th&gt;
-			&lt;th scope="col"&gt;th&lt;/th&gt;
-			&lt;th scope="col"&gt;th&lt;/th&gt;
+			&lt;th scope="col"&gt;Column heading&lt;/th&gt;
+			&lt;th scope="col"&gt;Column heading&lt;/th&gt;
+			&lt;th scope="col"&gt;Column heading&lt;/th&gt;
 		&lt;/tr&gt;
 	&lt;/thead&gt;
 	&lt;tbody&gt;
 		&lt;tr&gt;
-			&lt;td&gt;td&lt;/td&gt;
-			&lt;td&gt;td&lt;/td&gt;
-			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;Table cell&lt;/td&gt;
+			&lt;td&gt;Table cell&lt;/td&gt;
+			&lt;td&gt;Table cell&lt;/td&gt;
 		&lt;/tr&gt;
 		&lt;tr&gt;
-			&lt;td&gt;td&lt;/td&gt;
-			&lt;td&gt;td&lt;/td&gt;
-			&lt;td&gt;td&lt;/td&gt;
+			&lt;td&gt;Table cell&lt;/td&gt;
+			&lt;td&gt;Table cell&lt;/td&gt;
+			&lt;td&gt;Table cell&lt;/td&gt;
 		&lt;/tr&gt;
 	&lt;/tbody&gt;
 &lt;/table&gt;</code></pre>
+            <h2>Table with values</h2>
+            <p>This table is used for situations where you need a right aligned value, or a total along the bottom. Both of these are achieved by simply adding <code class="code">.amount</code> to a cell, or <code class="code">.total</code> to a row.</p>
             <div class="example-box-plain">
               <table class="full-width">
                 <thead>
@@ -122,8 +125,11 @@
 		&lt;/tr&gt;
 	&lt;/tbody&gt;
 &lt;/table&gt;</code></pre>
+            <h2>Collapsible table</h2>
+            <p>Tables can include collapsible rows by simply adding the correct classes, and including a table within the next row.</p>
+            <p>It's important to include <code class="code">colspan=""</code> in the <code class="code">td</code> of <code class="code">.table-collapse</code>, to make sure the collapsible table sits full width.</p>
             <div class="example-box-plain">
-              <table class="full-width">
+              <table style="table-layout: fixed;" class="full-width">
                 <thead>
                   <tr>
                     <th scope="col">th</th>
@@ -136,9 +142,15 @@
                     <td>td</td>
                   </tr>
                   <tr class="table-collapse">
+                    <!-- colspan is important to make the embedded table full width-->
                     <td colspan="2">
-                      <table class="full-width">
+                      <!-- .full-width class is important to make the embedded table full width-->
+                      <table style="table-layout: fixed;" class="full-width">
                         <tbody>
+                          <tr>
+                            <td>td</td>
+                            <td>td</td>
+                          </tr>
                           <tr>
                             <td>td</td>
                             <td>td</td>
@@ -152,9 +164,15 @@
                     <td>td</td>
                   </tr>
                   <tr class="table-collapse">
+                    <!-- colspan is important to make the embedded table full width-->
                     <td colspan="2">
-                      <table class="full-width">
+                      <!-- .full-width class is important to make the embedded table full width-->
+                      <table style="table-layout: fixed;" class="full-width">
                         <tbody>
+                          <tr>
+                            <td>td</td>
+                            <td>td</td>
+                          </tr>
                           <tr>
                             <td>td</td>
                             <td>td</td>
@@ -179,8 +197,14 @@
 			&lt;td&gt;td&lt;/td&gt;
 		&lt;/tr&gt;
 		&lt;tr class="table-collapse"&gt;
+			&lt;!-- colspan is important to make the embedded table full width --&gt;
 			&lt;td colspan="2"&gt;
+				&lt;!-- .full-width class is important to make the embedded table full width --&gt;
 				&lt;table class="full-width"&gt;
+					&lt;tr&gt;
+						&lt;td&gt;td&lt;/td&gt;
+						&lt;td&gt;td&lt;/td&gt;
+					&lt;/tr&gt;
 					&lt;tr&gt;
 						&lt;td&gt;td&lt;/td&gt;
 						&lt;td&gt;td&lt;/td&gt;
@@ -193,8 +217,14 @@
 			&lt;td&gt;td&lt;/td&gt;
 		&lt;/tr&gt;
 		&lt;tr class="table-collapse"&gt;
+			&lt;!-- colspan is important to make the embedded table full width --&gt;
 			&lt;td colspan="2"&gt;
+				&lt;!-- .full-width class is important to make the embedded table full width --&gt;
 				&lt;table class="full-width"&gt;
+					&lt;tr&gt;
+						&lt;td&gt;td&lt;/td&gt;
+						&lt;td&gt;td&lt;/td&gt;
+					&lt;/tr&gt;
 					&lt;tr&gt;
 						&lt;td&gt;td&lt;/td&gt;
 						&lt;td&gt;td&lt;/td&gt;
