Improved explanations of tables

--- a/public/tables.html
+++ b/public/tables.html
@@ -126,8 +126,7 @@
 	&lt;/tbody&gt;
 &lt;/table&gt;</code></pre>
             <h2>Collapsible table</h2>
-            <p>Tables can include collapsible rows by simply adding the correct classes, and including a table within the next row.</p>
-            <p>It's important to include <code class="code">colspan=""</code> in the <code class="code">td</code> of <code class="code">.table-collapse</code>, to make sure the collapsible table sits full width.</p>
+            <p>Tables can include collapsible rows by simply adding the correct classes and embedding a table within a cell.</p>
             <div class="example-box-plain">
               <table style="table-layout: fixed;" class="full-width">
                 <thead>
