Add content for PIP

--- a/public/pip-contents.html
+++ b/public/pip-contents.html
@@ -75,87 +75,16 @@
           </div>
           <div class="articleContent">
             <div>
-              <div class="steps"><a href="#" class="steps__link"><span class="steps--number">1</span></a>
-                <p>Check if you need permission or approval</p>
-                <p>Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.]</p>
-                <p>Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re <a href="#">terminally ill</a> your claim will be processed more quickly).</p>
-              </div>
-              <p>If you’re <a href="#">moving from DLA to PIP</a> your payments won’t stop while you’re waiting for your PIP claim to be processed, as long as you make your claim for PIP within a month of being told by the DWP that you should.</p>
-              <p>You should make sure you’re prepared and have all the relevant information to help you make your claim.</p>
-              <p>Your first payment for PIP will be backdated to the date you started your claim and cover the length of time it takes the Department for Work and Pensions (DWP) to make its decision. If you're moving from DLA to PIP your PIP payments will start the day after your DLA stops.</p>
-              <h2>The claims process</h2>
-              <p>There are 3 stages to your claim:</p>
-              <ol>
-                <li>Start your claim by calling the DWP</li>
-                <li>Wait for them to send you a claim form</li>
-                <li>Go to a face-to-face assessment - most people have to do this (but you won’t if you’re terminally ill)</li>
-              </ol>
-              <p>It can take up to 2 weeks for the DWP to send you a PIP claim form. While you wait, it’s a good idea to think about how you’ll fill in the claim form and if you need any supporting evidence.</p>
-              <p>If you’re waiting a very long time for a decision on your claim, contact your local Citizens Advice in England and Wales or in Scotland. You can complain to the DWP if the delay is unreasonable and may be able to claim compensation if it’s considered unlawful. However, there are no set rules on what counts as unreasonable or unlawful</p>
-              <h2>Start your claim - fill in a PIP1 form</h2>
-              <p>You can start your PIP claim by filling in a PIP1 form. You can do this either:</p>
-              <ul> 
-                <li>by phone - a DWP adviser will fill in the basic claim form during the call, it should only take 20 minutes</li>
-                <li>by post - filling in a paper form that the DWP can send you, and posting it back</li>
-                <p>You can’t fill in the PIP1 form online.</p>
-              </ul>
-              <div class="callout">
-                <p>It’s best to start your claim by phone because it’s quicker and your PIP payments are usually backdated to when you start your claim - either the date you phone or the date the DWP receives your PIP1 form.</p>
-                <p>You can only get the PIP claim forms from the DWP, not online or from Citizens Advice.</p>
-              </div>
-              <h2>Basic information you need to start your claim</h2>
-              <p>You’ll need to have this information when you call the DWP:</p>
-              <ul>
-                <li>your full name, address and phone number</li>
-                <li>your national insurance number</li>
-                <li>your bank or building society account details so payments can be made if PIP is awarded</li>
-                <li>contact details of your GP or other health professionals you deal with</li>
-                <li>the dates and details of any stays in hospital or residential care</li>
-                <li>your nationality or immigration status</li>
-                <li>if you’ve been abroad for more than 4 weeks at a time in the last 3 years (you’ll need the dates and details)</li>
-                <li>You’ll be asked if you have any conditions relating to your mental health, a learning difficulty or behavioural condition. These questions are asked to check if you need any additional help or support with your claim.</li>
-              </ul>
-              <div class="collapse collapsible">
-                <div class="collapse-toggle">I want to apply by phone</div>
-                <div class="collapse-content">
-                  <p>PIP claim line</p>
-                  <p>Telephone 0800 917 2222</p>
-                  <p>Textphone 0800 917 7777</p>
-                  <p>Open Monday to Friday, 8am to 6pm</p>
-                  <p>Calls are free from landlines and from mobiles.</p>
-                  <p>It should take about 20 minutes to complete the call. If you’d prefer someone else to call for you that’s fine, but you need to be with them so that you can give permission for them to speak for you.</p><a class="collapse-toggle-close">Close</a>
-                </div>
-              </div>
-              <div class="collapse collapsible">
-                <div class="collapse-toggle">I want to apply by post</div>
-                <div class="collapse-content">
-                  <p>It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.</p>
-                  <p>You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.</p>
-                  <p>Personal Independence Payment New Claims </p>
-                  <p>Post Handling Site B </p>
-                  <p>Wolverhampton </p>
-                  <p>WV99 1AH</p><a class="collapse-toggle-close">Close</a>
-                </div>
-              </div>
-              <div class="callout--adviser callout--icon">
-                <h3>Information for advisers</h3>
-                <p>The PIP2 form is sometimes called ‘How your condition affects you’ form</p>
-                <ul>
-                  <li>DWP guidance: <a href="#" class="a-external-link">Sample PIP1 form</a></li>
-                  <li>DWP guidance: <a href="#" class="a-external-link">Sample PIP2 form</a></li>
-                  <li>DWP guidance: <a href="#" class="a-external-link">Compensation for poor service</a></li>
-                </ul>
-                <p>Case law: <a href="#">Unlawful delays in processing a PIP claim and the High Court’s decision</a></p>
-                <p>Power of attorney: <a href="#">making decisions for someone who lacks mental capacity</a></p>
-                <p><a href="#">Appointees and benefit claims</a></p>
-              </div>
-              <div class="callout--related">
-                <h3>Next steps</h3>
-                <p>The DWP will assess whether you meet the basic eligibility conditions.</p>
-                <p>If you do, they’ll send you a PIP claim form. This form is where you tell them how your condition affects you. If you’ve waited more than 2 weeks, contact the PIP claims line and ask them for an update.</p>
-                <p>While you wait for the PIP2 form, you should think about <a href="#">how to fill in the PIP claim form</a> and if you need to organise any <a href="#">supporting evidence</a> to support your claim.</p>
-                <p>If you don’t meet the basic eligibility conditions, you’ll be sent a decision letter to say why you’ve been refused. If you think the decision is wrong, you can <a href="#">challenge the DWP’s decision</a>.</p>
-              </div>
+              <p>Select from one of the questions below that you need help with. The numbers relate to the question number on your PIP2 form. If you haven't received yours, you can <a href="#">request it from DWP</a>.</p>
+              <div class="box--links"><a href="#" class="steps__link">
+                  <h2>General Advice</h2>
+                  <p>Advice for completing the additional parts of your PIP2 form and return it.</p></a></div>
+              <div class="box--links"><a href="#" class="steps__link">
+                  <h2>Q3 Preparing Food</h2>
+                  <p>Detailed information to help answer question 3 about preparing food.</p></a></div>
+              <div class="box--links"><a href="pip-dressing.html" class="steps__link">
+                  <h2>Q8 Dressing and undressing</h2>
+                  <p>Detailed information to help answer question 8 about dressing and undressing.</p></a></div>
             </div>
           </div>
           <div id="simpleModal" class="modal">
@@ -209,9 +138,9 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Help with your PIP claim</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP" class="-current" item.="item.">How to claim PIP</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP" item.="item.">How to claim PIP</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Help filling in your PIP2 form" item.="item.">Help filling in your PIP2 form</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Help filling in your PIP2 form" class="-current" item.="item.">Help filling in your PIP2 form</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP if you have a terminal illness" item.="item.">How to claim PIP if you have a terminal illness</a>
                 </li>
